--- a/coffeefinder/static/style.css
+++ b/coffeefinder/static/style.css
@@ -27,10 +27,15 @@ h1, h2, h3 {
 }
 
 #pop-up {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    z-index: 1;
     padding: 10px;
-    border: 5px solid green;
+    background-color: white;
+    border: 5px solid black;
     display: none;
-    height: 250px;
+    height: 225px;
     width: 450px;
 }
 form > p {
